BLP-62 Spacing issues on App Mobile section.

--- a/public/landingPage/stylesheets/responsive.css
+++ b/public/landingPage/stylesheets/responsive.css
@@ -152,6 +152,14 @@
   .intro-content h3 {
     font-size: 150%;
   }
+
+  /*------------------------------------------*/
+  /*    Biin App Section
+  /*------------------------------------------*/
+  .stores img{
+    margin-top: 80px;
+  }
+  
   /*------------------------------------------*/
   /*	  Banner_2 Image
 	/*------------------------------------------*/
